# toggl-track-earnings

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: python-code-checks.yml  python-tests.yml  reusable-get-default-branch.yml
toggl_track_earnings/: __version__.py  toggl_track_earnings.py  websockets.py
toggl_track_earnings/http/: client.py
toggl_track_earnings/toggl_track/: __init__.py  client.py  consts.py
toggl_track_earnings/web/: index.html
toggl_track_earnings/web/assets/: main.css
